--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src=Aventura/img/Outlook-uwntsm5u (1).png alt="">
+            <img src=(1).png alt="">
             <p>Esses dias eu estava na avenida, quando eu recebo uma ligação desconhecida de Santos, onde falava que eu tinha uma surpresa em um gramado do Santos, porém, poderia ser no CT ou na Vila Belmiro... Qual dessas iremos escolher?
                 Mas antes, como vamos para Santos?</p>
             <button class="btn-proximo" data-proximo="1">Ir de Catraia</button>
